# parser_vacancies

./: README.md  main.py  pyproject.toml  settings.py
API_Files/: AbstractClassAPI.py  HeadHunterAPI.py  JSONSaver.py  SuperJobAPI.py  Vacancies.py
